FIX: made the UI better on mobile UPDATE: CV

--- a/static/css/cards.css
+++ b/static/css/cards.css
@@ -30,11 +30,11 @@ div.card > p:first-child {
 }
 
 div.card > p > img {
-  width: 50%;
+  width: max(200px, 50%);
   float: right;
   border-color: var(--card-img-border-color);
   border-style: solid;
   border-width: 5px;
   border-radius: 5px;
-  margin: 5px;
+  margin: 10px;
 }
